--- a/Cairo_Line3_Simulator/Cairo_Line3_Simulator/Cairo_Line3_Simulator.vcxproj
+++ b/Cairo_Line3_Simulator/Cairo_Line3_Simulator/Cairo_Line3_Simulator.vcxproj
@@ -119,4 +119,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties RESOURCE_FILE="Cairo_Line3_Simulator.rc" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
